--- a/css/style.css
+++ b/css/style.css
@@ -4,15 +4,34 @@
 }
 
 body {
-    background-color: plum
+    background-color:white
 }
+
+p, h1 {
+    margin: 0;
+}
+
+.fondo-rosa {
+    background-color: plum !important;
+}
+
+.boton-rosa {
+    background-color: rgb(255, 67, 217) !important;
+    border: none !important;
+}
+
+.boton-rosa:hover {
+    background-color: rgb(207, 51, 175) !important;
+    border: none !important;
+}
+
 
 .titulo {
     color: black;
 }
 
 .iconogrande {
-    font-size: 50px;
+    font-size: 3.125rem;
 }
 
 .encabezado__foto {
@@ -25,8 +44,8 @@ body {
 }
 
 .header__links {
-    margin: 10px;
-    padding: 10px;
+    margin: 0.625rem;
+    padding: 0.625rem;
     list-style: none;
     display: inline;
 }
@@ -36,19 +55,17 @@ body {
     text-decoration: none;
 }
 
-.encabezado__titulo {
-    margin-bottom: 15px;
-}
 
 .titulo__nombrejefa {
     text-align: center;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 100px;
+    font-size: 6.25rem;
+    color: rgb(221, 160, 221);
 }
 
 .video {
     width: 100%;
-    margin-bottom: 25px;
+    margin-bottom: 1.625rem;
 }
 
 .footer__infofinal {
@@ -62,25 +79,14 @@ body {
 }
 
 .iconogrande {
-    font-size: 200px;
+    font-size: 12.5rem;
 }
 
 .iconos__card {
     display: inline;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 1.25rem;
 }
-
-.iconos__card:hover {
-    color: palevioletred;
-}
-
-
-/*.iconos {
-    text-align: center;
-    margin: 10px;
-}*/
-
 
 .formulario__uno {
     display: flex;
@@ -103,53 +109,54 @@ body {
 
 .mensajemotivador {
     text-align: center;
-    margin-top: 10px;
-    margin-bottom: 15px;
+    margin-top: 0.625rem;
+    margin-bottom: 1rem;
     color: rgb(214, 20, 175);
     text-decoration: underline;
-    font-size: 20px;
+    font-size: 1.25rem;
 }
 
-.acceso__form {
-    display: flex;
-}
 
 .acceso__boton {
-    margin-left: 25px;
+    margin-left: 1.625rem;
 }
 
-
-
 .encabezado__titulo {
-    background-image: url(../recursos/foto-titulo.jpeg);
+    background-image: url(../recursos/fotoindex.jpeg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 450px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 28.125rem;
     color: black;
     text-align: center;
     font-weight: bolder;
-    margin: 20px;
-    padding: 20px;
-    border: 20px solid black;
+    margin: 1.25rem;
+    padding: 1.25rem;
+    border: 1.25rem solid black;
 }
 
 .encabezado__texto {
-    margin-top: 200px;
-    font-size: 30px;
+    background-color: plum;
+    width: 50%;
+    overflow-wrap: anywhere;
+    padding: 1rem 2rem;
+    border-radius: 0.5rem;
+    font-size: 1.875rem;
     font-family: 'Orelega One';
     font-weight: bolder;
     color: black;
     text-align: center;
-
 }
 
 .encabezado {
-    background-color: pink;
+    background-color:white;
 }
 
 .infoservicios__explicacionuno {
-    background-color: rgb(173, 226, 240);
+    background-color: rgb(221, 160, 221);
 
 }
 
@@ -158,19 +165,19 @@ body {
 }
 
 .infoservicios__explicaciontres {
-    background-color: rgb(173, 226, 240)
+    background-color: rgb(221, 160, 221);
 }
 
 .iconos {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    margin: 10px;
-    padding: 10px;
+    margin: 0.75rem;
+    padding: 0.75rem;
 }
 
 .quienessomos__titulo {
     font-family: 'Times New Roman', Times, serif;
-    font-size: 30px;
+    font-size: 1.875rem;
     color: rgb(214, 20, 175);
     text-align: center;
     text-decoration: underline;
@@ -179,84 +186,88 @@ body {
 
 .quienessomos__infogra {
     text-align: justify;
-    margin: 10px;
-    padding: 10px;
+    margin: 0.625rem;
+    padding: 0.625rem;
 }
 
 .quienessomos__contenido {
-    margin: 10px;
-    padding: 10px;
+    margin: 0.625rem;
+    padding: 0.625rem;
     display: flex;
 }
 
-.quienessomos__foto,
-.quienessomos__infogra {
+.quienessomos__foto, .quienessomos__infogra{
     flex-basis: 50%;
-
+    
 }
 
-.quienessomos__foto img {
+.quienessomos__foto img{
     max-width: 100%;
 
-}
-
-.quienessomos__foto img:hover {
-    transform: scale(1.05);
 }
 
 /*.video{
     max-width: 100%;
 }*/
 
-.video {
+.video{
     text-align: center;
 }
 
 .infoservicios {
-    margin: 10px;
-    padding: 10px;
+    margin: 0.625rem;
+    padding: 0.625rem;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    height: 100%;
+    justify-content: center;
 }
 
 .infoservicios__todosdos {
-    margin: 10px;
-    padding: 10px;
+    margin: 0.625rem;
+    padding: 0.625rem;
 }
 
 .acceso__clientes {
-    margin: 20x;
-    padding: 20px;
+    margin: 1.25rem;
+    padding: 1.25rem;
 }
 
 .acceso__siguiente {
-    margin: 6px;
-    padding: 3px 6px;
-    border-width: 1px solid transparent;
-    border-radius: 3px;
-    border-color: white;
-    cursor: pointer;
-    transition: all 0.15s;
-}
-
-.acceso__siguiente:hover {
-    color: white;
-    background-color: palevioletred;
+    border-color: rgb(0, 170, 255);
+    border-width: 0.25rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .formulario__boton {
-    margin: 6px;
-    padding: 3px 6px;
-    border-width: 1px solid transparent;
-    border-color: white;
-    border-radius: 3px;
-    cursor: pointer;
+    margin: 0.25rem;
+    padding: 0.25rem;
+    border-color: rgb(0, 170, 255);
+    border-width: 0.25rem;
 }
 
-.formulario__boton:hover {
-    background-color: palevioletred;
+.linkVisited {
     color: white;
+    text-decoration: none;
+
+    transition: all 0.25s;
 }
+
+.linkVisited:hover {
+    color: gray;
+}
+
+.linkVisited:visited {
+    color: gray;
+}
+
+.img-size {
+    width: 100% !important;
+}
+
+
 
 /* MQ tablet*/
 @media (max-width:991px) {
@@ -267,12 +278,23 @@ body {
     .infoservicios {
         grid-template-columns: repeat(2, 1fr);
     }
+    
+    .titulo-rosa{
+        color: rgb(200,0,200) !important;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
 
-
+    .icono-rosa{
+        color: rgb(200,0,200) !important;
+    }
 }
 
 /* MQ tcelular*/
 @media (max-width:667px) {
+    .encabezado__texto {
+        width: 100%;
+    }
+
     .iconos {
         grid-template-columns: 1fr;
     }
@@ -281,15 +303,25 @@ body {
         grid-template-columns: 1fr;
     }
 
-    .quienessomos__contenido {
+    .quienessomos__contenido{
         flex-direction: column;
     }
 
-    .formulario__form {
+    .formulario__form{
         flex-direction: column;
     }
 
-    .acceso__form {
-        flex-direction: column;
+    .acceso__form{
+       flex-direction: column;
     }
+    .titulo-rosa{
+        color: rgb(200,0,200) !important;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+
+    .icono-rosa{
+        color: rgb(200,0,200) !important;
+    }
+
 }
+
