--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,7 +1,8 @@
 $color-secundario: rgb(250, 74, 159) !important;
-$color-principal: rgb(239, 146, 239) !important;
+$color-principal: pink!important;
 $color-oscuro: rgb(216, 43, 182) !important;
-$color-claro:white;
+$background-color: rgb(244, 215, 220);
+$color-claro: white;
 $color-neutral:gray;
 $gradiente: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,0,215,1) 1%, rgba(251,212,248,1) 100%);
 $fuente-titulo:'Orelega One';
