--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,5 +3,6 @@
 @import '_mediaqueries.scss';
 @import '_base.scss';
 @import '_encabezado.scss';
+@import 'contacto';
 @import '_footer.scss';
 @import '_servicios.scss';
